2020-06-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Rename viewable_menu_bars ->
      viewable_bars.

2020-06-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Replace dynamic cast with static cast
      to GtkWidget pointer for Gtk>2:

          * geda_widget_get_allocation
          * geda_widget_in_destruction
          * geda_get_widget_parent
          * geda_get_widget_requisition
          * geda_get_widget_requisition

    * src/widgets/geda_option_menu.c: Utilize macro:

          * geda_get_widget_parent

    * src/widgets/geda_separator.c: Include geda_gtk_compat.h header.

2020-06-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_separator.c: Utilize macro:

          * geda_get_widget_style
          * geda_get_widget_window

2020-06-04 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_action.c: Revise geda_action_sync_menu_visible
      to eliminate GtkWidget pointer and nested conditional.

    * src/widgets/geda_menu_shell.c: Add function documentation for:

          * geda_menu_shell_set_keyboard_mode
          * geda_menu_shell_prepend
          * geda_menu_shell_remove_mnemonic

2020-05-27 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_button_event_window

    * src/widgets/geda_option_menu.c: Utilize macro:

          * geda_get_container_border_width
          * geda_set_widget_allocation
          * geda_get_button_event_window

2020-05-26 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c: Replace gdk_screen_get_monitor_at_window
      with gdk_display_get_monitor_at_window and gdk_screen_get_monitor_workarea
      with gdk_monitor_get_workarea in gtk3::geda_menu_item_position_menu.

    * src/widgets/geda_option_menu.c Utilize macro:

          * geda_get_widget_style

2020-05-25 Wiley E. Hill <wileyhill@gmail.com>
